fix: Remove useless display on aria-hidden
Used for icons https://github.com/cozy/cozy-contacts/pull/293/commits/38d7c8ce4b55dd2b42cb4257fb3f35355defb4c2 apparently, but show unwanted scrollbar on div when
displaying menus

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -2,7 +2,3 @@
 @require './contactForm.styl'
 @require './contactImportation.styl'
 @require './contactGroupCreation.styl'
-
-[aria-hidden=true]
-    display initial
-    visibility initial
